--- a/src/scss/core/core.scss
+++ b/src/scss/core/core.scss
@@ -1,3 +1,13 @@
+// Core : Colors, Variables, Mixins
+// @import "colors";
+// @import "variables";
+// @import "mixins";
+
 
 // Gooroom Options
 @import "gooroom";
+// Sidebar
+//@import "sidebar";
+
+
+
