--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,18 +1,25 @@
 // Here you can add other styles
 
-body {
-    -webkit-font-smoothing: antialiased;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #151b1e;
-    text-align: left;
-    background-color: #e4e5e6;
+.app-header {
+  flex-direction: row;
+  height: 55px;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+  border-bottom: 1px solid #a4b7c1;
+
+  // navbar
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.mytemp {
-    background-color: #1298aa
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  color: #fff;
+  background: #29363d;
 }
 
