--- a/src/scss/core/core.scss
+++ b/src/scss/core/core.scss
@@ -1,13 +1,21 @@
 // Core : Colors, Variables, Mixins
-// @import "colors";
-// @import "variables";
-// @import "mixins";
+@import "colors";
+@import "variables";
+@import "mixins";
 
 
+// Layout
+@import "layout";
+
+// body
+@import "body";
 // Gooroom Options
-@import "gooroom";
-// Sidebar
-//@import "sidebar";
+//@import "gooroom";
 
+// Sidebar
+@import "sidebar";
+
+// Breadcrumb
+@import "breadcrumb";
 
 
