레이아웃 완성, 테마 작업중.

--- a/src/scss/core/core.scss
+++ b/src/scss/core/core.scss
@@ -1,21 +1,1 @@
-// Core : Colors, Variables, Mixins
-@import "colors";
-@import "variables";
-@import "mixins";
-
-
-// Layout
-@import "layout";
-
-// body
-@import "body";
-// Gooroom Options
-//@import "gooroom";
-
-// Sidebar
-@import "sidebar";
-
-// Breadcrumb
-@import "breadcrumb";
-
-
+// Core css
