--- a/src/scss/core/core.scss
+++ b/src/scss/core/core.scss
@@ -1,1 +1,17 @@
 // Core css
+
+$primary-color: rgb(89, 180, 157);
+
+body {
+  background-color: $primary-color;
+}
+
+
+.grTableRow {
+    height: "36px !important";
+}
+
+$list-table-background: rgb(243, 184, 74);
+.grTempBackground {
+    background-color: $list-table-background;
+}
